syntax = "proto3";
package flowserviceaccount;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/trylotus/connectors/flow/flowserviceaccount";

message TransactionFeeUpdated {
    google.protobuf.Timestamp   ts                  = 1;
    uint64                      blockNumber         = 2;
    bytes                       txID                = 3;
    uint64                      logIndex            = 4;
    double                      newFee              = 5;
}

message AccountCreationFeeUpdated {
    google.protobuf.Timestamp   ts                  = 1;
    uint64                      blockNumber         = 2;
    bytes                       txID                = 3;
    uint64                      logIndex            = 4;
    double                      newFee              = 5;
}

message AccountCreatorAdded {
    google.protobuf.Timestamp   ts                  = 1;
    uint64                      blockNumber         = 2;
    bytes                       txID                = 3;
    uint64                      logIndex            = 4;
    bytes                       accountCreator      = 5;
}

message AccountCreatorRemoved {
    google.protobuf.Timestamp   ts                  = 1;
    uint64                      blockNumber         = 2;
    bytes                       txID                = 3;
    uint64                      logIndex            = 4;
    bytes                       accountCreator      = 5;
}

message IsAccountCreationRestrictedUpdated {
    google.protobuf.Timestamp   ts                  = 1;
    uint64                      blockNumber         = 2;
    bytes                       txID                = 3;
    uint64                      logIndex            = 4;
    bool                        isRestricted        = 5;
}